fix: drop hint outline covered by card preview image

--- a/Frontend/src/app/core-ui-module/styles/mixins.scss
+++ b/Frontend/src/app/core-ui-module/styles/mixins.scss
@@ -166,3 +166,16 @@
     border: unset;
     padding: unset;
 }
+
+@mixin afterPseudoElement {
+    position: relative;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        @content;
+    }
+}
